--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="action_cancel">Cancel</string>
     <string name="action_back">Back</string>
     <string name="action_refresh">Refresh</string>
+    <string name="action_undo">Undo</string>
+    <string name="action_redo">Redo</string>
     <string name="action_toggle_feed">Show feed</string>
     <string name="action_toggle_list">Show list</string>
     <string name="label_current_folder">Current folder</string>
