--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,17 @@
     <string name="action_new_folder">New folder</string>
     <string name="action_new_note">New note</string>
     <string name="action_new_markdown">New markdown</string>
+    <string name="action_open">Open</string>
     <string name="action_search">Search</string>
     <string name="action_templates">Templates</string>
     <string name="action_save">Save</string>
     <string name="action_settings">Settings</string>
     <string name="action_create_folder">Create</string>
     <string name="action_cancel">Cancel</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_rename">Rename</string>
+    <string name="action_copy">Copy</string>
+    <string name="action_move">Move</string>
     <string name="action_back">Back</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_undo">Undo</string>
@@ -17,6 +22,13 @@
     <string name="action_toggle_feed">Show feed</string>
     <string name="action_toggle_list">Show list</string>
     <string name="label_current_folder">Current folder</string>
+    <string name="label_parent_folder">Parent folder</string>
+    <string name="label_file_actions">File actions</string>
+    <string name="label_delete_file">Delete file?</string>
+    <string name="label_delete_file_message">This will delete %1$s.</string>
+    <string name="label_rename_file">Rename file</string>
+    <string name="label_copy_to">Copy to</string>
+    <string name="label_move_to">Move to</string>
     <string name="label_no_folder">No folder selected</string>
     <string name="label_empty_folder">Folder is empty</string>
     <string name="label_search_query">Search query</string>
@@ -49,6 +61,7 @@
     <string name="label_extension_md">.md</string>
     <string name="label_new_folder">New folder</string>
     <string name="hint_folder_name">Folder name</string>
+    <string name="hint_file_name">File name</string>
     <string name="label_settings_section_browser">File browser</string>
     <string name="label_settings_section_editor">Editor</string>
     <string name="label_settings_section_new_note">New note</string>
