GOOGLE DRIVE SYNC  INTEGRATION
Added a full Drive sync stack: Room metadata store, Drive auth + REST client, sync engine with push/pull + conflict handling, WorkManager scheduling, editor hook for debounce sync, and a new Sync screen reachable from Settings. The sync now respects Wi‑Fi/charging/battery constraints, supports picking existing Drive folders or creating new ones, and records a local sync log for diagnostics.

Key changes by file:

Data layer + sync logic: SyncEngine.kt, DriveClient.kt, DriveAuthManager.kt, SyncRepository.kt, SyncDatabase.kt
WorkManager + logging: DriveSyncWorker.kt, SyncScheduler.kt, SyncLogger.kt
UI + navigation: SyncScreen.kt, SyncViewModel.kt, SettingsScreen.kt, AppNav.kt
Preferences and dependencies: AppPreferences.kt, PreferencesRepository.kt, AppDependencies.kt, AppViewModelFactory.kt, MainActivity.kt
Build + permissions + strings: build.gradle.kts, build.gradle.kts, AndroidManifest.xml, strings.xml
Notes:

Drive scope is set to full drive to allow selecting any existing folder and writing inside it. If you want drive.file only, I can adjust and add a Drive Picker flow, but it’s a bigger UX change.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,30 @@
     <string name="label_settings_section_browser">File browser</string>
     <string name="label_settings_section_editor">Editor</string>
     <string name="label_settings_section_new_note">New note</string>
+    <string name="label_settings_section_sync">Sync</string>
+    <string name="label_drive_sync_title">Google Drive Sync</string>
+    <string name="label_drive_sync_enabled">Sync with Google Drive</string>
+    <string name="label_drive_sync_hint">Sync may be delayed by Wi-Fi, charging, or battery saving mode.</string>
+    <string name="label_drive_account">Account</string>
+    <string name="label_drive_signed_out">Not signed in</string>
+    <string name="action_drive_sign_in">Sign in</string>
+    <string name="action_drive_sign_out">Sign out</string>
+    <string name="label_drive_folder">Drive folder</string>
+    <string name="label_drive_folder_not_set">Folder not selected</string>
+    <string name="action_drive_pick_existing">Choose existing</string>
+    <string name="action_drive_create_new">Create new</string>
+    <string name="label_drive_status">Status</string>
+    <string name="action_drive_sync_now">Sync now</string>
+    <string name="label_drive_constraints">Resources</string>
+    <string name="label_drive_wifi_only">Only on Wi-Fi</string>
+    <string name="label_drive_charging_only">Only while charging</string>
+    <string name="label_drive_pause_sync">Pause sync</string>
+    <string name="label_drive_ignore_deletes">Ignore deletions from Drive</string>
+    <string name="label_drive_pick_folder">Pick Drive folder</string>
+    <string name="label_drive_create_folder">Create Drive folder</string>
+    <string name="label_drive_folder_name">Folder name</string>
+    <string name="label_loading">Loading...</string>
+    <string name="label_no_folders">No folders found</string>
     <string name="label_file_list_font_size">File list font size</string>
     <string name="label_file_sort_order">File sorting</string>
     <string name="label_sort_name_desc">Name (Z to A)</string>
