--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="label_no_folder">No folder selected</string>
     <string name="label_empty_folder">Folder is empty</string>
     <string name="label_folder_access_title">Folder access</string>
-    <string name="label_folder_access_message">Anotepad stores notes in Documents/Anotepad. We'll open the system folder picker to grant access and create the folder if needed.</string>
+    <string name="label_folder_access_message">Anotepad stores notes in Documents/Anotepad. We will open the system folder picker to grant access and create the folder if needed.</string>
     <string name="label_search_query">Search query</string>
     <string name="label_regex">Regex</string>
     <string name="label_searching">Searching...</string>
