--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Anotepad</string>
     <string name="action_pick_folder">Pick folder</string>
+    <string name="action_change_folder">Change folder</string>
     <string name="action_new_folder">New folder</string>
     <string name="action_new_note">New note</string>
     <string name="action_new_markdown">New markdown</string>
@@ -33,7 +34,7 @@
     <string name="label_no_folder">No folder selected</string>
     <string name="label_empty_folder">Tap the bottom-right button\nto create a new file.</string>
     <string name="label_folder_access_title">Folder access</string>
-    <string name="label_folder_access_message">Anotepad stores notes in Documents/Anotepad. We will open the system folder picker to grant access and create the folder if needed.</string>
+    <string name="label_folder_access_message">Anotepad stores notes in the folder you choose. We will open the system folder picker to grant access.</string>
     <string name="label_search_query">Search query</string>
     <string name="label_regex">Regex</string>
     <string name="label_searching">Searching...</string>
@@ -69,6 +70,9 @@
     <string name="label_settings_section_editor">Editor</string>
     <string name="label_settings_section_new_note">New note</string>
     <string name="label_settings_section_sync">Sync</string>
+    <string name="label_settings_section_storage">Storage</string>
+    <string name="label_main_folder">Main folder</string>
+    <string name="label_main_folder_not_set">No folder selected</string>
     <string name="label_drive_sync_title">Google Drive Sync</string>
     <string name="label_drive_sync_enabled">Sync with Google Drive</string>
     <string name="label_drive_sync_hint">Sync may be delayed by Wi-Fi, charging, or battery saving mode.</string>
