--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="label_main_folder_not_set">No folder selected</string>
     <string name="label_drive_sync_title">Google Drive Sync</string>
     <string name="label_drive_sync_enabled">Sync with Google Drive</string>
-    <string name="label_drive_sync_hint">Sync may be delayed by Wi-Fi, charging, or battery saving mode.</string>
+    <string name="label_drive_sync_hint">Auto sync: every 8 hours or within 15 min after saving. Sync is urgent, not instant.</string>
     <string name="label_drive_account">Account</string>
     <string name="label_drive_signed_out">Not signed in</string>
     <string name="action_drive_sign_in">Sign in</string>
@@ -90,7 +90,7 @@
     <string name="action_drive_pick_existing">Choose existing</string>
     <string name="action_drive_create_new">Create new</string>
     <string name="label_drive_status">Status</string>
-    <string name="action_drive_sync_now">Sync now</string>
+    <string name="action_drive_sync_now">Sync</string>
     <string name="label_drive_constraints">Resources</string>
     <string name="label_drive_wifi_only">Only on Wi-Fi</string>
     <string name="label_drive_charging_only">Only while charging</string>
