--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,7 @@
     <string name="label_drive_constraints">Resources</string>
     <string name="label_drive_pause_sync">Pause sync</string>
     <string name="label_drive_sync_on_start">Auto sync on start</string>
+    <string name="label_drive_sync_on_start_hint">Runs on start only when a Drive folder is connected.</string>
     <string name="label_drive_ignore_deletes">Ignore deletions from Drive</string>
     <string name="label_drive_pick_folder">Pick Drive folder</string>
     <string name="label_drive_create_folder">Create Drive folder</string>
