--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Anotepad</string>
     <string name="action_pick_folder">Pick folder</string>
     <string name="action_change_folder">Change folder</string>
+    <string name="action_new_file">New file</string>
     <string name="action_new_folder">New folder</string>
     <string name="action_new_note">New note</string>
     <string name="action_open">Open</string>
@@ -41,7 +42,7 @@
     <string name="label_move_to">Move to</string>
     <string name="label_no_folder">No folder selected</string>
     <string name="label_pick_folder_message">Select a folder on your phone once. Files will be in this folder.</string>
-    <string name="label_empty_folder">Tap the bottom-right button\nto create a new file.</string>
+    <string name="label_empty_folder">Tap New file in the top bar\nor the bottom-right button\nto create a new file.</string>
     <string name="label_folder_access_title">Folder access</string>
     <string name="label_folder_access_message">Anotepad stores notes in the folder you choose. We will open the system folder picker to grant access.</string>
     <string name="label_search_query">Search query</string>
@@ -125,6 +126,8 @@
     <string name="label_none">None</string>
     <string name="label_no_notes">No notes in folder</string>
     <string name="label_loading_more">Loading more...</string>
+    <string name="label_toolbar_onboarding_title">Toolbar tips</string>
+    <string name="label_toolbar_hint_new_file">Create a new file from the top bar. This is the same action as the bottom-right button.</string>
     <string name="label_toolbar_hint_new_folder">Create a new folder in the current location.</string>
     <string name="label_toolbar_hint_refresh">Refresh files and folders from storage.</string>
     <string name="label_toolbar_hint_search">Search notes in the current folder.</string>
