--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="action_overwrite">Overwrite</string>
     <string name="action_undo">Undo</string>
     <string name="action_redo">Redo</string>
+    <string name="action_insert_date_time_template">Insert date/time template</string>
     <string name="action_toggle_feed">Show feed</string>
     <string name="action_toggle_list">Show list</string>
     <string name="action_continue">Continue</string>
